@@ -1,4 +1,5 @@
 0.3.2
+Plugins are now whitelisted instead of blacklisted so new plugs have to be enabled from the plugin prefs.
 Included plugins now built and installed globally with main package.
 Added SessionManager plugin to main build/install.
 Added FileBrowser plugin to main build/install.
